2005-03-17  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (new_move): Ensure that no moves means no prior piece.

2005-03-16  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (configure_pixmaps_idle): Show error then exit when 
	rendering fails, removing stand-in pixbuf since it is no longer needed.
	(new_move): Don't add to the move total when it's the same piece 
	moved as last time.
	* help/C/gnotski.xml: Checked and removed FIXME in docs.

2005-03-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotski.c (prepare_map): Fix a typo (bug #167275).

2005-03-03  Richard Hoelscher  <rah@rahga.com>

	* help/C/gnotski.xml: Update documentation for 2.10
	* help/C/figures/*.png: Update screenshots.

2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnotski.xml: Bump the app version number. No revisions.

2005-02-17  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Minor edit to a few puzzles.

2005-02-11  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Added hint targets for 8 more puzzles. 7 remain.

2005-02-03  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Second half of "Sunshine" removed as it requires a
	special feature... though at 345 moves, it's hard enough anyway.

2005-01-21  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (configure_pixmaps_idle): Blank pixbuf when the
	image is corrupt or loader fails.

2005-01-03  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (load_image): Preimage API update, uri -> file.

2004-12-16  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (create_statusbar): Fix indentations in source.
	(configure_pixmaps_idle): Fix thinko in handling of idle draw.

2004-12-13  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Replace "New Game" menu item with "Restart Puzzle"
	(expose_space): Draw when scaling, but not while changing levels.
	(gui_draw_space): New. Prepares GCs and the pixmap buffer, draws
	a border. Allows us to remove get_bg_color() and the old frame.